--- a/app/app/templates/about.html
+++ b/app/app/templates/about.html
@@ -7,7 +7,7 @@
     <p>主要工具有Scrapy, Coreseek|Sphinx(search), jieba, Flask</p>
     <p>代码将会放到Github上，会在有时间的时候把全部搭建过程写到readme里</p>
     <p>也会更新到我的note里: 107.170.237.213:8080</p>
-    <p>Gtihub链接:</p>
+    <p>Gtihub链接: https://github.com/wendy2003888/WSearchEngine</p>
     <p>有任何问题请联系我：wendyh2003888@gmail.com</p>
     </div>          
 </center>
